--- a/AppCoder/templates/profesores.html
+++ b/AppCoder/templates/profesores.html
@@ -1,8 +1,19 @@
-{% extends 'padre.html' %}
-        {% load static %}
+{% extends "padre.html" %}
+    {% load static %}
     {% block contenidoQueCambia %}
 
     <!-- Aqui va el contenido qeu cambia, y lo asocio a la vista -->
     <h1> Este es el titulo de profesores</h1>
-    <p> blah</p>
+    <p> Profesores</p>
+    <table class="table">
+        <tr><th>Nombre</th><th>Apellido</th><th>Profesion</th></tr>
+            {% for profesor in lista_profesores %}
+            <tr>
+                <td>{{profesor.nombre}}</td>
+                <td>{{profesor.apellido}}</td>
+                <td>{{profesor.profesion}}</td>                
+            </tr>
+            {% endfor %}
+        </table>
+        
     {% endblock %}
