--- a/AppCoder/templates/padre.html
+++ b/AppCoder/templates/padre.html
@@ -20,16 +20,7 @@
     </head>
     <body>
         <!-- Navigation-->
-        <nav class="navbar navbar-light bg-light static-top">
-            <div class="container">
-                <a class="navbar-brand" href="{% url 'Inicio'%}">Inicio</a>
-                <a class="navbar-brand" href="{% url 'Profesores'%}">Profesores</a>
-                <a class="navbar-brand" href="{% url 'Cursos'%}">Cursos</a>
-                <a class="navbar-brand" href="{% url 'Estudiantes'%}">Estudiantes</a>
-                <a class="navbar-brand" href="{% url 'Entregables'%}">Entregables</a>
-                <a class="btn btn-primary" href="#signup">Sign Up</a>
-            </div>
-        </nav>
+{% include 'navbar.html' %}
         <!-- Masthead-->
 
 {% block contenidoQueCambia %}
